# cart_segmentation_training

./: .gitignore  convert_to_yolo.py  load_dataset.py  main.py  pyproject.toml  upload_model_to_hf.py  validate_labels.py
runs/segment/train/: args.yaml
runs/segment/train-2/: args.yaml  results.csv
