[project]
name = "cart-segmentation-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = [
    "datasets>=5.0.0",
    "dotenv>=0.9.9",
    "duckdb>=1.5.4",
    "jupyter>=1.1.1",
    "pandas>=3.0.3",
    "parquet>=1.3.1",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
]
